@@ -589,6 +589,8 @@ SW_DIR_RECURSIVE=Recherche r\u00e9cursi&ve
 
 SW_TITLE=Recherche textuelle
 
+SW_NUMBER=Nombre de r\u00e9sultats :
+
 SW_VIEWER_TEXT=Une recherche est effectu\u00e9e aussi bien dans la langue source que dans la langue cible.\n Elle est effectu\u00e9e dans le projet actuel ou dans n'importe quel dossier ou structure de dossiers.\n\n Les recherches exactes identifient la cha\u00eene de caract\u00e8res sp\u00e9cifi\u00e9e.\n\n Les recherches par mots clefs consid\u00e8rent la cha\u00eene de recherche comme un ensemble de mots cl\u00e9s (s\u00e9par\u00e9s par des espaces) et identifient tous les segments qui contiennent tous les mots de la recherche, sans consid\u00e9ration d'ordre.\n\n Vous pouvez utilisez les caract\u00e8res joker \u00ab\u00a0*\u00a0\u00bb et \u00ab\u00a0?\u00a0\u00bb dans toutes vos recherches. Le caract\u00e8re \u00ab\u00a0*\u00a0\u00bb s'identifie \u00e0 z\u00e9ro ou plusieurs caract\u00e8res. La recherche sur \u00ab\u00a0mon*\u00a0\u00bb donnera par exemple les r\u00e9sultats \u00ab\u00a0mon\u00a0\u00bb, \u00ab\u00a0monde\u00a0\u00bb, \u00ab\u00a0monter\u00a0\u00bb. Le caract\u00e8re \u00ab\u00a0?\u00a0\u00bb s'identifie \u00e0 un seul caract\u00e8re. La recherche sur \u00ab\u00a0mon?\u00a0\u00bb donnera par exemple le r\u00e9sultat \u00ab\u00a0mont\u00a0\u00bb.
 
 # 0 - Maximun number of finds/hits
